--- a/docs/_app/manifest.json
+++ b/docs/_app/manifest.json
@@ -1,48 +1,48 @@
 {
   ".svelte-kit/runtime/client/start.js": {
-    "file": "start-8c6062dd.js",
+    "file": "start-977f51f8.js",
     "src": ".svelte-kit/runtime/client/start.js",
     "isEntry": true,
     "imports": [
-      "_vendor-882bf64e.js"
+      "_vendor-de5c08b0.js"
     ],
     "dynamicImports": [
-      ".svelte-kit/runtime/components/layout.svelte",
+      "src/routes/__layout.svelte",
       ".svelte-kit/runtime/components/error.svelte",
       "src/routes/index.svelte"
     ]
   },
-  ".svelte-kit/runtime/components/layout.svelte": {
-    "file": "layout.svelte-b961a265.js",
-    "src": ".svelte-kit/runtime/components/layout.svelte",
+  "src/routes/__layout.svelte": {
+    "file": "pages/__layout.svelte-e68bb3a5.js",
+    "src": "src/routes/__layout.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-882bf64e.js"
+      "_vendor-de5c08b0.js"
     ]
   },
   ".svelte-kit/runtime/components/error.svelte": {
-    "file": "error.svelte-c3f851e5.js",
+    "file": "error.svelte-ff9b815c.js",
     "src": ".svelte-kit/runtime/components/error.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-882bf64e.js"
+      "_vendor-de5c08b0.js"
     ]
   },
   "src/routes/index.svelte": {
-    "file": "pages/index.svelte-f4c0277d.js",
+    "file": "pages/index.svelte-96361174.js",
     "src": "src/routes/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-882bf64e.js"
+      "_vendor-de5c08b0.js"
     ],
     "css": [
-      "assets/pages/index.svelte-4b2f5a7a.css"
+      "assets/pages/index.svelte-bfd8cf91.css"
     ]
   },
-  "_vendor-882bf64e.js": {
-    "file": "chunks/vendor-882bf64e.js"
+  "_vendor-de5c08b0.js": {
+    "file": "chunks/vendor-de5c08b0.js"
   }
 }
