--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
+	"type": "module",
+	"dependencies": {
+		"uuid": "^8.3.2"
+	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
@@ -27,6 +31,5 @@
 		"svelte-preprocess": "^4.10.1",
 		"tslib": "^2.3.1",
 		"typescript": "~4.5.4"
-	},
-	"type": "module"
+	}
 }
